k8s/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lunch-bot-deployment
spec:
  serviceName: lunch-bot
  replicas: 1
  selector:
    matchLabels:
      app: lunch-bot
  template:
    metadata:
      labels:
        app: lunch-bot
    spec:
      containers:
        - name: lunch-bot
          resources:
            requests:
              cpu: "1000m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          image: idock.daumkakao.io/leo_nidas/lunch_bot:latest
          imagePullPolicy: Always
          tty: true
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /lunch_bot/health_check
            initialDelaySeconds: 60
            timeoutSeconds: 3 # default 1
          readinessProbe:
            httpGet:
              port: 8000
              path: /lunch_bot/health_check
            initialDelaySeconds: 60
            timeoutSeconds: 3 # default 1
---
apiVersion: v1
kind: Service
metadata:
  name: lunch-bot
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: lunch-bot
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lunch-bot-ingress
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lunch-bot.devel.kakao.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lunch-bot
              servicePort: 80
